...
            android:background="@color/main_color_bg"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/josefinsana_regular"
                android:hint="@string/search_hint"
                android:inputType="text"
                android:maxLines="1" />
...
            android:textColor="@color/text"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

        <ImageView
            android:id="@+id/btn_search"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="12dp"
            android:clickable="true"
            android:src="@drawable/ic_search"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
...
