<resources>
    <string name="app_name">MovieApp</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="hello">Hello Brian!</string>
    <string name="watch">Watch your favorite movie</string>
    <string name="title">Title</string>
    <string name="duration">duration</string>
    <string name="rating">rating</string>
    <string name="seasons">Seasons</string>
...
